# BitMPlayer

./: BitMPlayer.desktop  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  playlist.cpp  playlist.hpp  playlistselector.cpp  playlistselector.hpp  playlistselector.ui  resources.qrc
